<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context=".Activity2">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_your_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_your_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_your_website"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_location"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivHappy"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/happy"
            android:focusable="true"
            app:srcCompat="@drawable/happy" />

        <ImageView
            android:id="@+id/ivNeutral"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/neutral"
            android:focusable="true"
            app:srcCompat="@drawable/neutral" />

        <ImageView
            android:id="@+id/ivSad"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/sad"
            android:focusable="true"
            app:srcCompat="@drawable/sad" />
    </LinearLayout>
</LinearLayout>